Make clean no longer throws an error for files not existing
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3586 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/docsys/documents/Makefile
+++ b/isis/src/docsys/documents/Makefile
@@ -136,8 +136,12 @@ clean:
 	    rm -f Makefile-temp ; \
 	    cd .. ; \
 	done ; \
-	rm ReleaseNotes/ReleaseNotes.xml
-	rm ParameterChanges/ParameterChanges.xml
+	if [ -f ReleaseNotes/ReleaseNotes.xml ]; then \
+	  rm ReleaseNotes/ReleaseNotes.xml; \
+	fi; \
+	if [ -f ParameterChanges/ParameterChanges.xml ]; then \
+	  rm ParameterChanges/ParameterChanges.xml; \
+	fi;
 
 FORCE:
 
