--- a/isis/src/control/apps/deltack/tsts/singlePoint/Makefile
+++ b/isis/src/control/apps/deltack/tsts/singlePoint/Makefile
@@ -19,6 +19,7 @@ commands:
 	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
 	  | sed 's/\-0.00000/ 0.00000/' \
 	  | sed 's/\-0.00000/ 0.00000/' \
+	  | sed 's/PLIER:  /PLIER: /' \
 	  > $(OUTPUT)/bundleout.txt
 	# The above command uses sed to do the following (in order):
 	# 1. remove cube filename paths
