--- a/isis/src/control/apps/deltack/tsts/twist/Makefile
+++ b/isis/src/control/apps/deltack/tsts/twist/Makefile
@@ -21,6 +21,8 @@ commands:
 	  | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
+	  | sed 's/\-0.00000/ 0.00000/' \
+	  | sed 's/PLIER:  /PLIER: /' \
 	  > $(OUTPUT)/bundleout.txt
 	# The above command uses sed to do the following (in order):
 	# 1. remove cube filename paths
