Added apichanges to make clean
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3812 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/docsys/documents/Makefile
+++ b/isis/src/docsys/documents/Makefile
@@ -148,6 +148,9 @@ clean:
 	if [ -f ReleaseNotes/ReleaseNotes.xml ]; then \
 	  rm ReleaseNotes/ReleaseNotes.xml; \
 	fi; \
+	if [ -f ApiChanges/ApiChanges.xml ]; then \
+	  rm ApiChanges/ApiChanges.xml; \
+	fi; \
 	if [ -f ParameterChanges/ParameterChanges.xml ]; then \
 	  rm ParameterChanges/ParameterChanges.xml; \
 	fi;
