Fixed #652 test makefile
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3817 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetstats/tsts/gFit/Makefile
+++ b/isis/src/control/apps/cnetstats/tsts/gFit/Makefile
@@ -8,5 +8,6 @@ commands:
 	  cnet=$(INPUT)/cnet.net \
 	  filter=yes \
 	  deffile=$(INPUT)/deffile.def \
-	  flatfile=$(OUTPUT)/truth.txt > /dev/null;
-	  $(RM) $(OUTPUT)/cube.lis;
+	  flatfile=$(OUTPUT)/out.txt > /dev/null;
+	$(SED) 's/, \/.*\/input\//, /' $(OUTPUT)/out.txt > $(OUTPUT)/truth.txt;
+	$(RM) $(OUTPUT)/cube.lis $(OUTPUT)/out.txt;
