--- a/isis/src/cassini/apps/vims2isis/tsts/calibrated/Makefile
+++ b/isis/src/cassini/apps/vims2isis/tsts/calibrated/Makefile
@@ -6,3 +6,7 @@ commands:
 	$(APPNAME) from=$(INPUT)/CM_1514284191_1.cub \
 	vis=$(OUTPUT)/vimsVisTruth.cub \
 	ir=$(OUTPUT)/vimsIrTruth.cub > /dev/null;
+	catlab from=$(OUTPUT)/vimsVisTruth.cub \
+	  > $(OUTPUT)/vis.pvl;
+	catlab from=$(OUTPUT)/vimsIrTruth.cub \
+	  > $(OUTPUT)/ir.pvl;
