--- a/isis/src/cassini/apps/vims2isis/tsts/uncalibrated/Makefile
+++ b/isis/src/cassini/apps/vims2isis/tsts/uncalibrated/Makefile
@@ -6,3 +6,7 @@ commands:
 	$(APPNAME) from=$(INPUT)/v1545949478_1.qub \
 	vis=$(OUTPUT)/vimsVisTruth.cub \
         ir=$(OUTPUT)/vimsIrTruth.cub > /dev/null;
+	catlab from=$(OUTPUT)/vimsVisTruth.cub \
+	  > $(OUTPUT)/vis.pvl;
+	catlab from=$(OUTPUT)/vimsIrTruth.cub \
+	  > $(OUTPUT)/ir.pvl;
