Fixes #594 - Had to fix app tests so that the high incidence files are not removed
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3834 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/odyssey/apps/thmbasemap1/tsts/nightonly/Makefile
+++ b/isis/src/odyssey/apps/thmbasemap1/tsts/nightonly/Makefile
@@ -5,7 +5,7 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) fromlist=$(INPUT)/proc.lis uselist=yes to=$(OUTPUT) night=true \
 	atmoscorr=false info=yes tostat=$(OUTPUT)/tostat.txt footprint=false rminput=false \
-	rmhighinc=yes highinclist=$(OUTPUT)/highinclist.txt nofilelist=$(OUTPUT)/nofilelist.txt \
+	rmhighinc=false highinclist=$(OUTPUT)/highinclist.txt nofilelist=$(OUTPUT)/nofilelist.txt \
 	nadirspclist=$(OUTPUT)/nadirspclist.txt imagegaplist=$(OUTPUT)/imagegaplist.txt \
 	> /dev/null;
 	cat $(OUTPUT)/tostat.txt | \
