--- a/isis/src/odyssey/apps/thmbasemap1/tsts/dayonly/Makefile
+++ b/isis/src/odyssey/apps/thmbasemap1/tsts/dayonly/Makefile
@@ -5,7 +5,7 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) fromlist=$(INPUT)/proc.lis uselist=yes to=$(OUTPUT) night=false \
 	atmoscorr=false info=yes tostat=$(OUTPUT)/tostat.txt footprint=false rminput=false \
-	rmhighinc=yes highinclist=$(OUTPUT)/highinclist.txt nofilelist=$(OUTPUT)/nofilelist.txt \
+	rmhighinc=false highinclist=$(OUTPUT)/highinclist.txt nofilelist=$(OUTPUT)/nofilelist.txt \
 	nadirspclist=$(OUTPUT)/nadirspclist.txt imagegaplist=$(OUTPUT)/imagegaplist.txt \
 	> /dev/null;
 	cat $(OUTPUT)/tostat.txt | \
