Fixed the app Tests
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3871 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/local/apps/soc2isisnet/tsts/aprioriJacksonCrater/Makefile
+++ b/isis/src/local/apps/soc2isisnet/tsts/aprioriJacksonCrater/Makefile
@@ -4,7 +4,7 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/MRF_NAC_xyz_noZadj_Yvel20_4ISIS.atf \
-	to=$(OUTPUT)/jcrater.net \
+	to=$(OUTPUT)/truth.net \
 	sigmas=override \
 	point_type=all \
 	slat=2 slon=2 srad=0.1 \
