--- a/isis/src/local/apps/soc2isisnet/tsts/adjustedCabeus/Makefile
+++ b/isis/src/local/apps/soc2isisnet/tsts/adjustedCabeus/Makefile
@@ -4,6 +4,6 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/absolute.atf \
-	to=$(OUTPUT)/cabeus.net \
+	to=$(OUTPUT)/truth.net \
 	measurements=adjusted \
 	point_id_prefix=SS_ > /dev/null;
