--- a/isis/src/local/apps/soc2isisnet/tsts/aprioriCabeus/Makefile
+++ b/isis/src/local/apps/soc2isisnet/tsts/aprioriCabeus/Makefile
@@ -4,5 +4,5 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/absolute.atf \
-	to=$(OUTPUT)/cabeus.net \
+	to=$(OUTPUT)/truth.net \
 	point_id_prefix=SS_ > /dev/null;
