Added option to have the label, tables and BLOBs transfered from the input file to the mosaic. This option is only available when the mosaic is being created.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3930 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/handmos/tsts/average/Makefile
+++ b/isis/src/base/apps/handmos/tsts/average/Makefile
@@ -10,6 +10,7 @@ commands:
 	  outline=2 \
 	  outband=1 \
 	  create=yes \
+	  propagate=false \
 	  nsamples=10 \
 	  nlines=20 \
 	  nbands=1 > /dev/null;
