--- a/isis/src/base/apps/handmos/tsts/beneath/Makefile
+++ b/isis/src/base/apps/handmos/tsts/beneath/Makefile
@@ -6,14 +6,15 @@ commands:
 	$(APPNAME) from=$(INPUT)/isisTruth.cub \
 	mosaic=$(OUTPUT)/handmosTruth2.cub \
 	priority=beneath \
-    insample=1 \
-    inline=1 \
-    inband=1 \
-    outsample=1 \
-    outline=2 \
-    outband=2 \
-    nlines=10 \
+	insample=1 \
+	inline=1 \
+	inband=1 \
+	outsample=1 \
+	outline=2 \
+	outband=2 \
+	nlines=10 \
 	nsamples=10 \
 	nbands=5 \
 	track=no \
+	propagate=false \
 	create=yes > /dev/null;
