Fixes #625 - Updated tests to use less precision for those machines that can't handle it
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3949 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/cassini/tsts/vims/Makefile
+++ b/isis/src/cassini/tsts/vims/Makefile
@@ -33,6 +33,12 @@ commands:
 	  to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput.pvl SAMPLE=32 LINE=33 ALLOWOUTSIDE=no \
 	  > /dev/null
 
+	cat $(OUTPUT)/CM_1477461989_1.cub--finalOutput.pvl | \
+	  sed 's/\([0-9]*\.[0-9]\{9\}\)\([0-9]*\)/\1/g' \
+	  > $(OUTPUT)/temp.txt
+
+	$(MV) $(OUTPUT)/temp.txt $(OUTPUT)/CM_1477461989_1.cub--finalOutput.pvl
+
 	$(ECHO) "Output of getsn..." >> $(OUTPUT)/CM_1477461989_1.cub--getsnOutput.txt
 
 	$(GETSN) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
