--- a/isis/src/base/apps/caminfo/tsts/default/Makefile
+++ b/isis/src/base/apps/caminfo/tsts/default/Makefile
@@ -12,6 +12,10 @@ commands:
 	  sed 's/\([-0-9][0-9]*\.[0-9]\{5\}\)\([0-9]*\)\(, [-0-9]*\.[0-9]\{5\}\)\([0-9]*\)/\1\3/g' \
 	  > $(OUTPUT)/caminfo2.pvl;
 	$(MV) $(OUTPUT)/caminfo2.pvl $(OUTPUT)/caminfo.pvl;
+	cat $(OUTPUT)/caminfo.pvl | \
+	  sed 's/\([0-9]*\.[0-9]\{9\}\)\([0-9]*\)/\1/g' \
+	  > $(OUTPUT)/caminfo2.pvl;
+	$(MV) $(OUTPUT)/caminfo2.pvl $(OUTPUT)/caminfo.pvl;
 	
 	$(APPNAME) FROM=$(INPUT)/input2.cub \
 	TO=$(OUTPUT)/caminfo2.pvl ISISLABEL=true ORIGINAL=true \
@@ -22,6 +26,10 @@ commands:
 	  sed 's/\([-0-9][0-9]*\.[0-9]\{5\}\)\([0-9]*\)\(, [-0-9]*\.[0-9]\{5\}\)\([0-9]*\)/\1\3/g' \
 	  > $(OUTPUT)/caminfo3.pvl;
 	$(MV) $(OUTPUT)/caminfo3.pvl $(OUTPUT)/caminfo2.pvl;
+	cat $(OUTPUT)/caminfo2.pvl | \
+	  sed 's/\([0-9]*\.[0-9]\{9\}\)\([0-9]*\)/\1/g' \
+	  > $(OUTPUT)/caminfo3.pvl;
+	$(MV) $(OUTPUT)/caminfo3.pvl $(OUTPUT)/caminfo2.pvl;
 	
 	$(APPNAME) FROM=$(INPUT)/input2.cub \
 	TO=$(OUTPUT)/caminfo3.pvl ISISLABEL=true ORIGINAL=true \
@@ -30,5 +38,9 @@ commands:
 	  sed 's/\(MULTIPOLYGON.*[0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
 	  sed 's/\([0-9]*\.[0-9]\{5\}\)\([0-9]*)))\)/\1)))/g' | \
 	  sed 's/\([-0-9][0-9]*\.[0-9]\{5\}\)\([0-9]*\)\(, [-0-9]*\.[0-9]\{5\}\)\([0-9]*\)/\1\3/g' \
+	  > $(OUTPUT)/caminfo4.pvl;
+	$(MV) $(OUTPUT)/caminfo4.pvl $(OUTPUT)/caminfo3.pvl;
+	cat $(OUTPUT)/caminfo3.pvl | \
+	  sed 's/\([0-9]*\.[0-9]\{9\}\)\([0-9]*\)/\1/g' \
 	  > $(OUTPUT)/caminfo4.pvl;
 	$(MV) $(OUTPUT)/caminfo4.pvl $(OUTPUT)/caminfo3.pvl;
