--- a/isis/src/base/apps/campt/tsts/setSL/Makefile
+++ b/isis/src/base/apps/campt/tsts/setSL/Makefile
@@ -8,3 +8,7 @@ commands:
 	sample=25 line=25 \
 	append=false \
 	> /dev/null;
+	cat $(OUTPUT)/output.pvl | \
+	  sed 's/\([0-9]*\.[0-9]\{9\}\)\([0-9]*\)/\1/g' \
+	  > $(OUTPUT)/temp.txt;
+	$(MV) $(OUTPUT)/temp.txt $(OUTPUT)/output.pvl;
