Fixes #594 - Got rid of FROM and USELST parameters and changed TO parameter to TOPATH - program now only takes a from list as input
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3952 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/odyssey/apps/thmbasemap1/tsts/dayonly/Makefile
+++ b/isis/src/odyssey/apps/thmbasemap1/tsts/dayonly/Makefile
@@ -3,7 +3,7 @@ APPNAME = thmbasemap1
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) fromlist=$(INPUT)/proc.lis uselist=yes to=$(OUTPUT) night=false \
+	$(APPNAME) fromlist=$(INPUT)/proc.lis topath=$(OUTPUT) night=false \
 	atmoscorr=false info=yes tostat=$(OUTPUT)/tostat.txt footprint=false rminput=false \
 	rmhighinc=false highinclist=$(OUTPUT)/highinclist.txt nofilelist=$(OUTPUT)/nofilelist.txt \
 	nadirspclist=$(OUTPUT)/nadirspclist.txt imagegaplist=$(OUTPUT)/imagegaplist.txt \
