--- a/isis/src/odyssey/apps/thmbasemap1/tsts/nightonly/Makefile
+++ b/isis/src/odyssey/apps/thmbasemap1/tsts/nightonly/Makefile
@@ -3,7 +3,7 @@ APPNAME = thmbasemap1
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) fromlist=$(INPUT)/proc.lis uselist=yes to=$(OUTPUT) night=true \
+	$(APPNAME) fromlist=$(INPUT)/proc.lis topath=$(OUTPUT) night=true \
 	atmoscorr=false info=yes tostat=$(OUTPUT)/tostat.txt footprint=false rminput=false \
 	rmhighinc=false highinclist=$(OUTPUT)/highinclist.txt nofilelist=$(OUTPUT)/nofilelist.txt \
 	nadirspclist=$(OUTPUT)/nadirspclist.txt imagegaplist=$(OUTPUT)/imagegaplist.txt \
