Bug fix references #680
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3971 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/Makefile
+++ b/isis/Makefile
@@ -155,7 +155,7 @@ tabcomplete:
 	elif [ ! -f bin/isiscomplete ]; then                                     \
 	  echo $(CURTIMESTAMP) "Isis application 'isiscomplete' is missing";     \
 	else                                                                     \
-	  echo $(CURTIMESTAMP) "#!/bin/csh" > $$ISISROOT/scripts/tabcomplete.csh;\
+	  echo "#!/bin/csh" > $$ISISROOT/scripts/tabcomplete.csh;                \
 	  isiscomplete `ls $$ISISROOT/bin | grep -v xml` | sed 's/; /;\n/g'      \
 	      >> $$ISISROOT/scripts/tabcomplete.csh;                             \
 	fi;
