Makefile fix for tab completes, references #538
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4002 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/Makefile
+++ b/isis/Makefile
@@ -156,8 +156,8 @@ tabcomplete:
 	  echo $(CURTIMESTAMP) "Isis application 'isiscomplete' is missing";     \
 	else                                                                     \
 	  echo "#!/bin/csh" > $$ISISROOT/scripts/tabcomplete.csh;                \
-	  isiscomplete `ls $$ISISROOT/bin | grep -v xml` | sed 's/; /;\n/g'      \
-	      >> $$ISISROOT/scripts/tabcomplete.csh;                             \
+	  isiscomplete `ls $$ISISROOT/bin | grep -v xml` | sed 's/; /;~/g' |     \
+	               tr '~' '\n' > $$ISISROOT/scripts/tabcomplete.csh;         \
 	fi;
 
 #----------------------------------------------------------------------------
