Added camera model parameters to fx references #705
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4021 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/fx/tsts/cubestats/Makefile
+++ b/isis/src/base/apps/fx/tsts/cubestats/Makefile
@@ -11,3 +11,9 @@ commands:
 	f2=$(INPUT)/in2.cub \
 	to=$(OUTPUT)/result2.cub \
 	equation="max(f1,f2)+min(f1,f2)" > /dev/null;
+	$(APPNAME) f1=$(INPUT)/in1.cub \
+	to=$(OUTPUT)/result3.cub \
+	equation="cubeavg(f1)" > /dev/null;
+	$(APPNAME) f1=$(INPUT)/in1.cub \
+	to=$(OUTPUT)/result4.cub \
+	equation="cubestd(f1)" > /dev/null;
