cnethist apptest Makefile; references #787
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4270 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnethist/tsts/case01/Makefile
+++ b/isis/src/control/apps/cnethist/tsts/case01/Makefile
@@ -7,7 +7,7 @@ commands:
 	$(LS) -1 $(OUTPUT)/*.net > $(OUTPUT)/net.lis;
 	$(APPNAME) netlist=$(OUTPUT)/net.lis \
 	to=hist.txt \
-	bin_width = 0.1;
+	bin_width = 0.1 > /dev/null;
 	cat hist.txt  \
 	  | sed 's/\/[^,]*\/\([^,\/]*\.net\)/\1/g' \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
