Fixed simple test failures caused from updates to FileName; references #809
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4321 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetwinnow/tsts/case01/Makefile
+++ b/isis/src/control/apps/cnetwinnow/tsts/case01/Makefile
@@ -10,11 +10,11 @@ commands:
 	onet=$(OUTPUT)/winnowed.net \
         file_prefix = winnowingReport > /dev/null;
 	cat winnowingReportGuilty.csv \
-          | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
+	  | sed 's/\(,\|: \|^\)\([^,:][^,:]*\/\)\([^,\/:]*\.\)\(net\|cub\)/\1\3\4/g' \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  > $(OUTPUT)/winnowingReportGuilty.csv;
 	cat winnowingReportIgnored.csv \
-          | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
+	  | sed 's/\(,\|: \|^\)\([^,:][^,:]*\/\)\([^,\/:]*\.\)\(net\|cub\)/\1\3\4/g' \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  > $(OUTPUT)/winnowingReportIgnored.txt.csv;
 	# The above command uses sed to do the following (in order):
