--- a/isis/src/control/apps/cnetwinnow/tsts/case01/Makefile
+++ b/isis/src/control/apps/cnetwinnow/tsts/case01/Makefile
@@ -10,11 +10,11 @@ commands:
 	onet=$(OUTPUT)/winnowed.net \
         file_prefix = winnowingReport > /dev/null;
 	cat winnowingReportGuilty.csv \
-	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' \
+	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  > $(OUTPUT)/winnowingReportGuilty.csv;
 	cat winnowingReportIgnored.csv \
-	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' \
+	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  > $(OUTPUT)/winnowingReportIgnored.txt.csv;
 	# The above command uses sed to do the following (in order):
