--- a/isis/src/control/apps/deltack/tsts/singlePoint/Makefile
+++ b/isis/src/control/apps/deltack/tsts/singlePoint/Makefile
@@ -13,7 +13,7 @@ commands:
 	lat1=-26.439008370134 \
 	lon1= 352.19745020451 > /dev/null;
 	cat bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
-	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' \
+	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
 	  | sed 's/\-0.00000/ 0.00000/' \
