Ignore perl errors as long as stdout is okay
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4346 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/deltack/tsts/twist/Makefile
+++ b/isis/src/control/apps/deltack/tsts/twist/Makefile
@@ -29,7 +29,7 @@ commands:
 	# 2. remove digits beyond the fifth decimal place of decimal numbers
 	# 3. remove date and time
 	cat residuals.csv \
-	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' \
+	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  > $(OUTPUT)/residuals.csv
 	$(RM) bundleout.txt > /dev/null;
 	$(RM) residuals.csv  > /dev/null;
