made LineScanCameraGroundMap more robust; resolves #810
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4362 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnethist/tsts/case01/Makefile
+++ b/isis/src/control/apps/cnethist/tsts/case01/Makefile
@@ -6,7 +6,7 @@ commands:
 	$(CP) $(INPUT)/*.net $(OUTPUT) > /dev/null;
 	$(LS)  $(OUTPUT)/*jigged.net > $(OUTPUT)/net.lis;
 	$(LS)  $(OUTPUT)/*Chen.net >> $(OUTPUT)/net.lis;
-	$(APPNAME) netlist=$(OUTPUT)/net.lis \
+	$(APPNAME) fromlist=$(OUTPUT)/net.lis \
 	to=hist.txt \
 	bin_width = 0.1 > /dev/null;
 	cat hist.txt  \
