test update; references #810
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4363 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/mro/apps/hijitter/tsts/withCrop/Makefile
+++ b/isis/src/mro/apps/hijitter/tsts/withCrop/Makefile
@@ -23,7 +23,8 @@ commands:
 	$(RM) $(OUTPUT)/files.lis $(OUTPUT)/outlist.lis > /dev/null;
 	$(RM) $(OUTPUT)/jitter.bc $(OUTPUT)/red5.cub print.prt > /dev/null;
 #	$(RM) $(OUTPUT)/PSP_007556_2010_RED4.balance.cropped.cub > /dev/null;
-#	$(RM) $(OUTPUT)/PSP_007556_2010_RED5.balance.cropped.cub > /dev/null;
+# Red 6 has special pixel differences so use stats to compare instead for now since ignorespecial option is gone.
+	$(RM) $(OUTPUT)/PSP_007556_2010_RED5.balance.cropped.cub > /dev/null;
 # Red 6 has special pixel differences so use stats to compare instead for now since ignorespecial option is gone.
 	$(RM) $(OUTPUT)/PSP_007556_2010_RED6.balance.cropped.cub > /dev/null;
 #PSP_007556_2010_RED4.balance.cropped.cub.TOLERANCE = .001
