Fix caching and catTest, fixes #572
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4396 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/tsts/CropEnlargeCam2map/Makefile
+++ b/isis/src/base/tsts/CropEnlargeCam2map/Makefile
@@ -1,6 +1,7 @@
 APP1NAME = crop
 APP2NAME = enlarge
 APP3NAME = cam2map
+CropEnlargeCam2mapTruth.cub.TOLERANCE = 0.000001
 
 include $(ISISROOT)/make/isismake.tsts
 
