Fixed items that went wrong with isis3.4.0, fixes #847
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4424 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/docsys/Makefile
+++ b/isis/src/docsys/Makefile
@@ -12,8 +12,7 @@ include $(ISISROOT)/make/isismake.macros
 #APPLICATIONS = $(filter-out Makefile CVS $(wildcard *.*) , data/$(wildcard *))
 #DOCUMENTS    = $(filter-out Makefile $(wildcard *.*) , documents/$(wildcard *))
 DOCDIR = $(ISISROOT)/doc
-#USER = webman
-USER = rraub
+USER = isis3mgr
 USERDEV = isis3mgr
 
 help:
@@ -148,13 +147,13 @@ wwwdoc: wwwschema
 	echo " "
 	echo "_______________________________________________________________________________"
 	echo "BEGIN SYNC: docs to public server"
-	rsync -vlHr --delete --progress --rsh=ssh --exclude 'Schemas/*' --cvs-exclude $(ISISROOT)/doc/ $(USER)@jane:/www/sites/isis/htdocs/
+	rsync -vlHrt --delete --progress --rsh=ssh --exclude 'Schemas/*' --cvs-exclude $(ISISROOT)/doc/ $(USER)@jane-d:/www/sites/isis/htdocs/
 
 devdoc:  
 	echo " "
 	echo "_______________________________________________________________________________"
 	echo "BEGIN SYNC: docs to development server"
-	rsync -vlHtr --delete --progress --rsh=ssh --cvs-exclude $(ISISROOT)/doc/ $(USERDEV)@astrodev:/www/sites/Isis/htdocs/
+	rsync -vlHrt --delete --progress --rsh=ssh --cvs-exclude $(ISISROOT)/doc/ $(USERDEV)@astrodev:/www/sites/Isis/htdocs/
 
 # copy Schemas to public www
 
@@ -162,8 +161,8 @@ wwwschema: schemas
 	echo " "
 	echo "_______________________________________________________________________________"
 	echo "SYNC: schemas to public server"
-	rsync -vlHtr --progress --rsh=ssh --cvs-exclude $(ISISROOT)/doc/Schemas/ $(USER)@jane:/www/sites/isis/htdocs/Schemas/
-	rsync -vlHptr --delete --progress --rsh=ssh --cvs-exclude $(ISISROOT)/doc/assets $(USER)@jane:/www/sites/isis/htdocs/
+	rsync -vlHrt --progress --rsh=ssh --cvs-exclude $(ISISROOT)/doc/Schemas/ $(USER)@jane-d:/www/sites/isis/htdocs/Schemas/
+	rsync -vlHprt --delete --progress --rsh=ssh --cvs-exclude $(ISISROOT)/doc/assets $(USER)@jane-d:/www/sites/isis/htdocs/
 
 
 
