Fix to sed in Makefile, references #293
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4426 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetedit/tsts/ignore/Makefile
+++ b/isis/src/control/apps/cnetedit/tsts/ignore/Makefile
@@ -4,7 +4,7 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(LS) $(INPUT)/*.cub > $(OUTPUT)/list.lis;
-	$(CAT) $(INPUT)/measurelist.txt | sed 's/X/$(INPUT)/' \
+	$(CAT) $(INPUT)/measurelist.txt | sed 's#X#$(INPUT)#' \
 	  > $(OUTPUT)/measurelist.txt;
 	$(APPNAME) CNET=$(INPUT)/cnet.net \
 	CUBELIST=$(OUTPUT)/list.lis \
