circle.xml: Added the functionality of circle2; the user can define a circle by three points on its edge instead of the center and radius. Fixes #518
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4475 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/circle/tsts/default/Makefile
+++ b/isis/src/base/apps/circle/tsts/default/Makefile
@@ -3,5 +3,6 @@ APPNAME = circle
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from=$(INPUT)/isisTruth.cub \
-	  to=$(OUTPUT)/circleTruth1.cub > /dev/null;
+	$(APPNAME) from= $(INPUT)/Sample.cub \
+	  to= $(OUTPUT)/testCircle_noUserInput.cub+32bit \
+	  definition=centerrad > /dev/null;
