Modified appTest to get CK kernels from input directory instead of MRO data area. Fixes #926.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4483 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/system/apps/kerneldbgen/tsts/ck/Makefile
+++ b/isis/src/system/apps/kerneldbgen/tsts/ck/Makefile
@@ -10,7 +10,7 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) to=$(OUTPUT)/temp.db.txt \
 	  type=CK \
-	  recondir=\$$mro/kernels/ck \
+	  recondir=$(INPUT) \
 	  reconfilter=mro_sc_2005-12-*.bc \
 	  sclk=\$$mro/kernels/sclk/MRO_SCLKSCET.00006.tsc \
 	  lsk=\$$base/kernels/lsk/naif0008.tls > /dev/null;
