Modified appTest to include test for filter array. References #926.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4484 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/system/apps/kerneldbgen/tsts/ck/Makefile
+++ b/isis/src/system/apps/kerneldbgen/tsts/ck/Makefile
@@ -1,3 +1,7 @@
+# CK Test for kerneldbgen
+# This test creates an output database file from the kernels in the input file
+# that follow the given filter for reconstructed ck file name patterns.
+# Note that the array style for this input is \("pattern1","pattern2"\)
 APPNAME = kerneldbgen
 
 # grep -v RunTime testTmp/temp01.db &gt; <temp>temp1.db</temp> 2&gt;&amp;1;
@@ -11,6 +15,6 @@ commands:
 	$(APPNAME) to=$(OUTPUT)/temp.db.txt \
 	  type=CK \
 	  recondir=$(INPUT) \
-	  reconfilter=mro_sc_2005-12-*.bc \
+	  reconfilter=\("mro_sc_2005-10*.bc","mro_sc_2005-12-*.bc"\) \
 	  sclk=\$$mro/kernels/sclk/MRO_SCLKSCET.00006.tsc \
 	  lsk=\$$base/kernels/lsk/naif0008.tls > /dev/null;
