Fixed Makefile test files to eliminate LeapSecond kernel from app tests; references #806
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4486 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/spiceinit/tsts/nadirCKgap/Makefile
+++ b/isis/src/base/apps/spiceinit/tsts/nadirCKgap/Makefile
@@ -1,6 +1,6 @@
 APPNAME = spiceinit
 
-labels.txt.IGNORELINES = ByteOrder StartByte Bytes
+error.txt.IGNORELINES = LeapSecond
 
 include $(ISISROOT)/make/isismake.tsts
 
@@ -8,7 +8,7 @@ commands:
 	cp $(INPUT)/m1301260.cub $(OUTPUT)/nadirTruth.cub;
 	$(APPNAME) from=$(OUTPUT)/nadirTruth.cub attach=no cknadir=yes \
 	tspk='$$base/kernels/spk/de405.bsp' > /dev/null;
-	catlab from=$(OUTPUT)/nadirTruth.cub > $(OUTPUT)/labels.txt;
+	catlab from=$(OUTPUT)/nadirTruth.cub to=$(OUTPUT)/labels.pvl;
 	$(APPNAME) from=$(OUTPUT)/nadirTruth.cub attach=no \
 	tspk='$$base/kernels/spk/de405.bsp' >& $(OUTPUT)/error.txt || true;
 	rm $(OUTPUT)/nadirTruth.cub;
